# air-duck

./: .gitignore  GEMINI.md  metadata.ducklake  pyproject.toml
airflow/dags/: test.py
tests/integration/: test_s3_connection.py
