[project]
name = "ducklake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.2",
    "apache-airflow-providers-cncf-kubernetes>=10.6.0",
    "boto3>=1.39.2",
    "boto3-stubs==1.39.2",
    "duckdb>=1.3.1",
    "lakefs-client>=1.44.0",
    "marimo>=0.14.9",
    "psycopg>=3.2.9",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pytest>=8.4.1",
]
